--- a/angu17035/src/index.html
+++ b/angu17035/src/index.html
@@ -8,20 +8,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <link rel="icon" href="img/favicon.png" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link
     href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
     rel="stylesheet"
   />
-
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-  <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <script
     type="module"
@@ -31,26 +23,23 @@
     nomodule=""
     src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
   ></script>
-
   <script
     defer
     src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
   ></script>
+
   <script defer src="js/script.js"></script>
+
+
 </head>
-<body id="home">
+
+
+<body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
   <app-root></app-root>
 </body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
 
-<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.sequence-min.js"></script>
-<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-<script defer src="js/jquery.flexslider.js"></script>
-<script type="text/javascript" src="js/script.min.js" ></script>
-<script src="../scripts//homePage.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
 </html>
