--- a/angu17035/src/index.html
+++ b/angu17035/src/index.html
@@ -27,10 +27,7 @@
     defer
     src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
   ></script>
-
-  <script defer src="js/script.js"></script>
-
-
+<script src="../scripts/homePage.js"></script>
 </head>
 
 
